# aegi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  KIRO.md  README.md  docker-compose.yml
code/aegi-core/: alembic.ini  docker-compose.dev.yml  env.sh  pyproject.toml
code/aegi-core/alembic/: env.py  script.py.mako
code/aegi-core/alembic/versions/: 01195e08d027_add_p0_evidence_chain_tables.py  08029bef1b60_add_assertion_feedback_table.py  1a9c2f5e7d10_upgrade_ontology_contract_payloads.py  1dda8adf4f9b_add_foundation_gate0_shared_fields.py  2b8d3f6a9c11_add_relation_facts_table.py  377e829ab430_add_gate0_shared_fields_to_hypotheses.py  3aa9b7d62b4c_add_investigations_table.py  3c7e4a8b0d12_add_entity_identity_actions_table.py  3f52046a1239_add_cases_and_actions.py  4d9e0aa1f2b3_add_analysis_memory_table.py  7b3e2a1f5c09_add_multilingual_fields_to_source_claims.py  9a1b2c3d4e5f_add_reports_table.py  a2e59547cc18_add_tool_traces.py  b2c3d4e5f6a7_add_collection_jobs.py  bc5052692a40_init.py  c3d4e5f6a7b8_add_event_driven_tables.py  c4a7e3b21d06_add_ontology_tables.py  d4e5f6a7b8c9_add_bayesian_ach.py  e5f6a7b8c9d0_add_gdelt_events.py  f6a7b8c9d0e1_add_subscription_match_rules.py
code/aegi-core/deploy/: openclaw.yaml  playbooks.yaml
code/aegi-core/deploy/openclaw-plugin/: aegi-tools.mjs
code/aegi-core/docs/prompts/: cc-fix-phase1-tests.md  cc-p1-ontology-upgrade.md  cc-p2-investigation-agent.md  cc-p3-cross-correlation-memory.md  cc-phase2-review.md
code/aegi-core/scripts/: curl_links_api.sh  e2e_test.sh  seed_pykeen_case.py
code/aegi-core/src/aegi_core/: settings.py
code/aegi-core/tests/: conftest.py  run_e2e_real.py  test_ach_hypothesis_engine.py  test_analysis_memory.py  test_assertion_fusion_pipeline.py  test_bayesian_api.py  test_bayesian_assess.py  test_bayesian_event_integration.py  test_bayesian_math.py  test_cameo.py  test_cases_api.py  test_causal_api.py  test_causal_inference.py  test_causal_predictive_scenarios.py  test_claim_extraction_pipeline.py  test_collection_api.py  test_conversational_hallucination_gate.py  test_conversational_query_api.py  test_cross_correlation.py  test_cross_lingual_entity_alignment.py  test_db_smoke.py  test_ds_fusion.py  test_e2e_ingest_to_assertion.py  test_e2e_proactive_push.py  test_entity_disambiguation.py  test_entity_identity.py  test_event_bus.py  test_event_driven_integration.py  test_evidence_chain_api.py  test_feedback_service.py  test_fixtures_import_api.py  test_gdelt_anomaly.py  test_gdelt_api.py  test_gdelt_client.py  test_gdelt_events_csv.py  test_gdelt_monitor.py  test_gdelt_scheduler.py  test_graph_analysis.py  test_health.py  test_hypothesis_engine_generate.py  (+33 more)
code/aegi-core/tests/contract_tests/: test_error_model_contract.py  test_llm_governance_contract.py  test_schemas_contract.py
code/aegi-core/tests/fixtures/: manifest.json
code/aegi-mcp-gateway/: pyproject.toml
code/aegi-mcp-gateway/src/aegi_mcp_gateway/: __init__.py  policy.py  settings.py
code/aegi-mcp-gateway/tests/: test_gateway_policy_and_trace.py  test_health.py  test_tools_contract.py
开源项目参考/baize-core/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
开源项目参考/baize-core/alembic/: env.py
开源项目参考/baize-core/alembic/versions/: 0001_initial.py  0002_entity_event_schema.py  0003_storm_research_schema.py  0004_policy_enforced_and_conflict_notes.py  0005_scrape_guard_tables.py  0006_artifact_origin_tool.py  0007_audit_task_and_model_traces.py  0008_checkpoints.py  0009_tos_checks.py  0010_evidence_retention_fields.py  0011_checkpoint_meta_and_audit_fields.py  0012_add_query_indexes.py  0013_report_modules.py  0014_report_modules_more.py
开源项目参考/baize-core/deploy/kong/: kong.yml
开源项目参考/baize-core/deploy/nginx/: nginx.conf
开源项目参考/baize-core/deploy/openmetadata/: docker-compose.yml
开源项目参考/baize-core/deploy/waf/: crs-setup.conf  modsecurity.conf
开源项目参考/baize-core/eval_report/: operational_20260129_193634.html  operational_20260129_193634.md  strategic_20260129_193607.html  strategic_20260129_193607.md  strategic_20260129_193925.html  strategic_20260129_193925.md  test_report.html  test_summary.md
开源项目参考/baize-core/eval_report/checkpoints/: operational_checkpoint.json  strategic_checkpoint.json
开源项目参考/baize-core/src/baize_core/: __init__.py  cli.py  exceptions.py
开源项目参考/baize-core/tests/: test_adapters.py  test_audit_trace_apis.py  test_community.py  test_constraints.py  test_context_engine.py  test_crew_coordinator.py  test_critic_judge.py  test_deep_research.py  test_depth_control.py  test_edge_integration.py  test_entity_event_schema.py  test_evaluation.py  test_evidence_validator.py  test_exceptions.py  test_graphrag_pipeline.py  test_hybrid_retrieval.py  test_mcp_client_trace_headers.py  test_model_router.py  test_ooda_graph.py  test_opensearch_audit_sink.py  test_opensearch_store.py  test_osint_e2e.py  test_path_routing.py  test_policy_budget.py  test_policy_engine.py  test_prompt_builder.py  test_prompt_injection_end_to_end.py  test_qdrant_store.py  test_quality.py  test_quality_gate.py  test_replay_service.py  test_retention_cleanup.py  test_retention_policy.py  test_settings_isolation.py  test_storage_hitl_mcp.py  test_storm_e2e.py  test_storm_report_fix.py  test_structured_output.py  test_tool_output_sanitizer.py  test_user_profile.py  (+1 more)
开源项目参考/baize-mcp-gateway/: .env.example  README.md  pyproject.toml  tool_registry.json
开源项目参考/baize-mcp-gateway/alembic/: env.py  script.py.mako
开源项目参考/baize-mcp-gateway/alembic/versions/: 0001_add_tool_trace_caller_fields.py
开源项目参考/baize-mcp-gateway/src/baize_mcp_gateway/: __init__.py  app.py  config.py  db.py  main.py  proxy_pool.py  rate_limiter.py  registry.py  retry.py  scrape_guard.py  (+1 more)
开源项目参考/baize-mcp-gateway/tests/: __init__.py  test_gateway_integration.py  test_proxy_pool.py  test_retry.py  test_trace_context.py
(+859 files in other folders)
