# Author: msq
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegi-core"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "neo4j>=5.0",
  "qdrant-client>=1.9",
  "minio>=7.2",
  "anyio>=4.0",
  "websockets>=13.0",
  "openai>=1.30",
  "instructor>=1.3",
  "python-multipart>=0.0.9",
  "networkx>=3.0",
  "scipy>=1.12",
]

[project.optional-dependencies]
analytics = [
  "pykeen>=1.10",
]
ingest = [
  "pypdf>=4.0",
  "python-docx>=1.1",
  "beautifulsoup4>=4.12",
  "markdownify>=0.13",
  "playwright>=1.40",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.22.1",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "requires_postgres: 需要 PostgreSQL (port 8710)",
    "requires_llm: 需要 LiteLLM Proxy (port 8713)",
    "requires_qdrant: 需要 Qdrant (port 8716)",
    "requires_gateway: 需要 MCP Gateway (port 8704)",
    "requires_neo4j: 需要 Neo4j (port 8715)",
    "requires_searxng: 需要 SearXNG (port 8888)",
]
